--- a/src/main/resources/util/Thymeleaf.html
+++ b/src/main/resources/util/Thymeleaf.html
@@ -11,6 +11,14 @@
 
     <link rel="stylesheet" type="text/css" media="all"
           href="../../css/thvsjsp.css" th:href="@{/css/thvsjsp.css}"/>
+    <link rel="stylesheet" type="text/css" media="all"
+          href="${url}css/custom.min.css" th:href="@{../css/custom.min.css}"/>
+    <link rel="stylesheet" type="text/css" media="all"
+          href="${url}css/animate.min.css" th:href="@{../css/animate.min.css}"/>
+
+    <link rel="stylesheet" type="text/css" media="all"
+          href="${url}css/nprogress.css" th:href="@{../css/nprogress.css}"/>
+
 
 </head>
 
