--- a/src/main/resources/util/плюшки.html
+++ b/src/main/resources/util/плюшки.html
@@ -1,1 +1,8 @@
 private final AtomicLong counter = new AtomicLong();
+
+
+<script>
+    function newDoc() {
+        window.location.assign("incDel/new");
+    }
+</script>
